# aws-iot-device-sdk-cpp-v2

./: .gitignore  .gitmodules  CMakeLists.txt  FAQ.md  LICENSE  MQTT5.md  NOTICE  PREREQUISITES.md  README.md  README_MQTT5.md  builder.json  doxygen.config  format-check.py  format-check.sh  make-docs.py  package.xml  publish-release.sh  update-version.sh
devicedefender/: CMakeLists.txt
devicedefender/cmake/: IotDeviceDefender-cpp-config.cmake  iotdevicedefender-cpp-config.cmake
devicedefender/script/: DDTestRun.py
devicedefender/source/: DeviceDefender.cpp
devicedefender/tests/: CMakeLists.txt  DeviceDefenderMetricsTest.cpp  DeviceDefenderTest.cpp
discovery/: CMakeLists.txt
discovery/cmake/: Discovery-cpp-config.cmake  discovery-cpp-config.cmake
discovery/source/: ConnectivityInfo.cpp  DiscoverResponse.cpp  DiscoveryClient.cpp  GGCore.cpp  GGGroup.cpp
eventstream_rpc/: CMakeLists.txt  README.md
eventstream_rpc/source/: EventStreamClient.cpp
eventstream_rpc/tests/: CMakeLists.txt  DefaultConnectionConfig.cpp  EchoTestRpcClient.cpp  EchoTestRpcModel.cpp  EventStreamClientTest.cpp
greengrass_ipc/: CMakeLists.txt
greengrass_ipc/cmake/: greengrassipc-cpp-config.cmake
greengrass_ipc/source/: DefaultConnectionConfig.cpp  GreengrassCoreIpcClient.cpp  GreengrassCoreIpcModel.cpp
iotdevice/: CMakeLists.txt
iotdevice/source/: IotDevice.cpp
iotdevicecommon/: CMakeLists.txt
iotdevicecommon/source/: IotDevice.cpp
jobs/: CMakeLists.txt
jobs/cmake/: IotJobs-cpp-config.cmake
jobs/source/: DescribeJobExecutionRequest.cpp  DescribeJobExecutionResponse.cpp  DescribeJobExecutionSubscriptionRequest.cpp  GetPendingJobExecutionsRequest.cpp  GetPendingJobExecutionsResponse.cpp  GetPendingJobExecutionsSubscriptionRequest.cpp  IotJobsClient.cpp  IotJobsClientV2.cpp  JobExecutionData.cpp  JobExecutionState.cpp  JobExecutionSummary.cpp  JobExecutionsChangedEvent.cpp  JobExecutionsChangedSubscriptionRequest.cpp  JobStatus.cpp  NextJobExecutionChangedEvent.cpp  NextJobExecutionChangedSubscriptionRequest.cpp  RejectedError.cpp  RejectedErrorCode.cpp  StartNextJobExecutionResponse.cpp  StartNextPendingJobExecutionRequest.cpp  StartNextPendingJobExecutionSubscriptionRequest.cpp  UpdateJobExecutionRequest.cpp  UpdateJobExecutionResponse.cpp  UpdateJobExecutionSubscriptionRequest.cpp  V2ErrorResponse.cpp  V2ServiceError.cpp
jobs/tests/: CMakeLists.txt  v2ClientTests.cpp
samples/: CMakeLists.txt  README.md
samples/command/v2/: CMakeLists.txt  README.md  command_execution_context.h  command_executor.cpp  command_executor.h  command_stream_handler.cpp  command_stream_handler.h  main.cpp
samples/commands/commands-sandbox/: CMakeLists.txt  command_stream_handler.cpp  command_stream_handler.h  main.cpp
samples/commands/execute_command/: CMakeLists.txt  README.md  command_execution_context.h  command_executor.cpp  command_executor.h  command_stream_handler.cpp  command_stream_handler.h  main.cpp
samples/device_defender/basic_report/: CMakeLists.txt  README.md  main.cpp
samples/device_defender/mqtt5_basic_report/: CMakeLists.txt  README.md  main.cpp
samples/fleet_provisioning/basic/: CMakeLists.txt  README.md  main.cpp
samples/fleet_provisioning/fleet_provisioning/: CMakeLists.txt  README.md  main.cpp
samples/fleet_provisioning/mqtt5_fleet_provisioning/: CMakeLists.txt  main.cpp
samples/fleet_provisioning/provision-basic/: CMakeLists.txt  README.md  main.cpp
samples/fleet_provisioning/provision-csr/: CMakeLists.txt  README.md  main.cpp
samples/fleet_provisioning/provision_basic/: README.md  main.cpp
samples/fleet_provisioning/provision_csr/: CMakeLists.txt  README.md  main.cpp
samples/greengrass/basic_discovery/: CMakeLists.txt  README.md  ci_run_discovery_cfg.json  copy_files.sh  gdk-config.json  hello_world_subscriber.py  main.cpp  recipe.yaml
samples/greengrass/ipc/: CMakeLists.txt  README.md  copy_files.sh  gdk-config.json  main.cpp  recipe.yaml
samples/identity/fleet_provisioning/: CMakeLists.txt  main.cpp
samples/jobs/describe_job_execution/: CMakeLists.txt  README.md  main.cpp
samples/jobs/job_execution/: CMakeLists.txt  README.md  main.cpp
samples/jobs/jobs-sandbox/: CMakeLists.txt  README.md  main.cpp
samples/jobs/mqtt5_describe_job/: CMakeLists.txt  main.cpp
samples/jobs/mqtt5_describe_job_execution/: CMakeLists.txt  README.md  main.cpp
samples/jobs/mqtt5_job_execution/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/basic_connect/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/basic_pub_sub/: CMakeLists.txt  main.cpp
samples/mqtt/basic_pub_sub_kerb/: CMakeLists.txt  main.cpp
samples/mqtt/cognito_connect/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/custom_authorizer_connect/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt5_aws_websocket/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt5_custom_auth_signed/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt5_custom_auth_unsigned/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt5_pkcs11/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt5_sample/: CMakeLists.txt  main.cpp
samples/mqtt/mqtt5_x509/: CMakeLists.txt  README.md  main.cpp
samples/mqtt/mqtt_custom_auth/: CMakeLists.txt  main.cpp
samples/mqtt/operation_queue/: CMakeLists.txt  MqttOperationQueue.cpp  MqttOperationQueue.h  MqttOperationQueueTests.cpp  MqttOperationQueueTests.h  README.md  main.cpp
samples/secure_tunneling/: CMakeLists.txt  main.cpp
samples/secure_tunneling_proxy/: main.cpp
samples/stand-alone-samples/: README.md
samples/utils/: CommandLineUtils.cpp  CommandLineUtils.h
secure_tunneling/: CMakeLists.txt
secure_tunneling/cmake/: iotsecuretunneling-cpp-config.cmake
secure_tunneling/source/: IotSecureTunnelingClient.cpp  SecureTunnel.cpp  SecureTunnelingNotifyResponse.cpp  SecureTunnelsNotifyResponse.cpp  SubscribeToTunnelsNotifyRequest.cpp
secure_tunneling/tests/: CMakeLists.txt  SecureTunnelTest.cpp  main.cpp
varianttest/: CMakeLists.txt
varianttest/cmake/: varianttest-cpp-config.cmake
varianttest/source/: VariantTest.cpp
(+14494 files in other folders)
